src/objects/Funding__c.object
<CustomObject>
    <fields>
        <fullName>AgreementNum__c</fullName>
        <label>Agreement Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <description>The agreement related to funding</description>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Funding</relationshipLabel>
        <relationshipName>Funding</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AllocatedAmount__c</fullName>
        <label>Allocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Attribute1__c</fullName>
        <label>Attribute1</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute2__c</fullName>
        <label>Attribute2</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute3__c</fullName>
        <formula>IF(ISPICKVAL(Project__r.DistributionRule__c, &quot;WORK/WORK&quot;), &quot;B&quot;,
   IF(OR(Project__r.OUID__c == &quot;143&quot;, Project__r.OUID__c == &quot;25772&quot;), &quot;B&quot;, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangeManagerApprovedForSynch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ChangeManagerApprovedForSynch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeManagerIsChanged__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Change Manager Is Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeManagerIsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ChangeManagerIsNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateAllocatedDate__c</fullName>
        <label>Date Allocated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FundingClassification__c</fullName>
        <label>Funding Classification</label>
        <picklist>
            <picklistValues>
                <fullName>ORIGINAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADDITIONAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_OUID__c</fullName>
        <label>Legacy OUID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUID__c</fullName>
        <formula>Agreement__r.Project__r.OUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleFundingID__c</fullName>
        <description>Combination of project number and task number</description>
        <externalId>true</externalId>
        <label>Oracle Funding ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OracleSyncErrorMessage__c</fullName>
        <label>Oracle Sync Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OracleSyncStatus__c</fullName>
        <description>P = Pending
T = Transfer (Success)
E = Error
S = Successful</description>
        <inlineHelpText>P = Pending
T = Transfer (Success)
E = Error
S = Successful</inlineHelpText>
        <label>Oracle Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PMAgreementReference__c</fullName>
        <label>PM Agreement Reference</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMFundingReference__c</fullName>
        <label>PM Funding Reference</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMTaskNumber__c</fullName>
        <label>PM Task Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjFuncRateDate__c</fullName>
        <label>ProjFunc Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjFuncRateExchangeRate__c</fullName>
        <label>ProjFunc Rate Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjFuncRateType__c</fullName>
        <label>ProjFunc Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Spot</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalBaselinedAmount__c</fullName>
        <label>Project Functional Baselined Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <label>Project Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The project task as it relates to funding</description>
        <label>Project Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Funding</relationshipLabel>
        <relationshipName>Funding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The funding as it relates to projects</description>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Funding</relationshipLabel>
        <relationshipName>Funding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalBaselinedAmount__c</fullName>
        <label>Total Baselined Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Funding</label>
    <nameField>
        <displayFormat>Fund-{0000000000}</displayFormat>
        <label>Funding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>